# vb6-antlr

./: .gitmodules  .pre-commit-config.yaml  README.md  pyproject.toml
design/: high-level-design.md  tool-configuration.md
grammars/: VisualBasic6Parser.g4
src/vb6_antlr/: __init__.py  cli.py  config.py  diagnostics.py  parser.py
src/vb6_antlr/ir/: __init__.py  builder.py
src/vb6_antlr/serialization/: __init__.py  json_serializer.py
src/vb6_grammar/grammars/: VisualBasic6Lexer.interp  VisualBasic6Lexer.py  VisualBasic6Parser.interp  VisualBasic6Parser.py  VisualBasic6ParserListener.py
tests/: __init__.py  test_cli.py  test_config.py  test_ir_builder.py  test_parser.py
